--- a/MapperLoader/Starter/Starter.vcxproj
+++ b/MapperLoader/Starter/Starter.vcxproj
@@ -123,14 +123,14 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <AdditionalIncludeDirectories>C:\Users\skytl\Desktop\CC\MapperLoader\Include\Auth;C:\Users\skytl\Desktop\CC\MapperLoader\Include\nlohmann;C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)MapperLoader\Include\Auth;$(SolutionDir)MapperLoader\Include\nlohmann;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>C:\Users\skytl\Desktop\CC\MapperLoader\Include\Auth\lib\libcurl.lib;C:\Users\skytl\Desktop\CC\MapperLoader\Include\Auth\lib\library_x64.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(SolutionDir)MapperLoader\Include\Auth\lib\libcurl.lib;$(SolutionDir)MapperLoader\Include\Auth\lib\library_x64.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
     </Link>
   </ItemDefinitionGroup>
