--- a/UserMode Communication/UserMode Communication.vcxproj.filters
+++ b/UserMode Communication/UserMode Communication.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="Globals.h">
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
+    <ClInclude Include="game\game.h">
+      <Filter>Arquivos de Cabeçalho</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
