--- a/MapperLoader/kdmapper/kdmapper.vcxproj
+++ b/MapperLoader/kdmapper/kdmapper.vcxproj
@@ -45,7 +45,9 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <LibraryPath>$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <WarningLevel>Level4</WarningLevel>
@@ -71,12 +73,12 @@
       <TreatWarningAsError>false</TreatWarningAsError>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
-      <AdditionalIncludeDirectories>$(SolutionDir)MapperLoader\Include\Auth;$(SolutionDir)MapperLoader\Include\nlohmann;C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)Kernel-Learning\MapperLoader\Include\Auth;$(SolutionDir)Kernel-Learning\MapperLoader\Include\nlohmann;D:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>version.lib;$(SolutionDir)MapperLoader\Include\Auth\lib\libcurl.lib;$(SolutionDir)MapperLoader\Include\Auth\lib\library_x64.lib;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x64\d3d9.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>version.lib;$(SolutionDir)Kernel-Learning\MapperLoader\Include\Auth\lib\libcurl.lib;$(SolutionDir)Kernel-Learning\MapperLoader\Include\Auth\lib\library_x64.lib;D:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x64\d3d9.lib;D:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x64\d3dx9.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
     </Link>
   </ItemDefinitionGroup>
@@ -113,6 +115,7 @@
     <ClInclude Include="..\injector.h" />
     <ClInclude Include="..\Menu\menu.h" />
     <ClInclude Include="..\sha1.h" />
+    <ClInclude Include="logo.h" />
     <ClInclude Include="TempFiles.h" />
     <ClInclude Include="intel_driver.hpp" />
     <ClInclude Include="intel_driver_resource.hpp" />
@@ -121,6 +124,12 @@
     <ClInclude Include="portable_executable.hpp" />
     <ClInclude Include="service.hpp" />
     <ClInclude Include="utils.hpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="resource.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Logo.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
